# antsibull-docs

./: .flake8  .git-blame-ignore-revs  .pre-commit-hooks.yaml  .pylintrc.automated  CHANGELOG.md  CHANGELOG.rst  README.md  REUSE.toml  antsibull-docs.cfg  codecov.yml  lint-flake8.sh  lint-mypy.sh  lint-pylint.sh  lint-pyre.sh  mkdocs.yml  noxfile.py  pyproject.toml  test-pytest.sh  test-vectors.yaml
.github/: dependabot.yml
.github/workflows/: antsibull-docs.yml  build-css.yml  nox.yml  pythonlinters.yml  pythontests.yml  reuse.yml  validate-html.py
.reuse/: dep5
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 1.0.0.yml  1.1.0.yml  1.6.1.yml  1.yml  10-filter-test-input-positional.yml  101-plugin-param-ordering-note.yml  102-pydantic.yml  103-roles-schema.yml  108-markup.yml  112-validate-markup.yml  113-semantic-markup-roles.yml  12-lint-collection-docs-plugin-rst.yml  120-ansible-core.yml  121-devel-stable-current.yml  122-antsibull-core-sh.yml  124-antsibull-docs-parser.yml  125-parsing-backend-use-app_ctx.yml  126-sphinx-init-self-reqs.yml  13-rstcheck.yml  134-flatmapping.yml  14-licenses.yml  151-changes.yml  155-aliases.yml  156-indent-deprecation.yml  157-other-collections.yml  160-dependency-collection.yml  163-lint-paragraph.yml  166-envvars.yml  169-seealso-desc-copying.yml  17-docs-parsing.yml  171-lint.yml  172-ref-casing.yml  173-lint-array-stubs.yml  175-sphinx-ext-nodes.yml  177-output-format.yml  18-json.yml  180-plugin-role.yml  182-core-lint.yml  183-routing.yml  184-lint-routing.yml  (+171 more)
docs/: ansible-output.md  changelog.md  collection-docs.md  community.md  index.md  package-docs.md
src/antsibull_docs/: __init__.py  _pydantic_compat.py  app_context.py  augment_docs.py  collection_config.py  collection_links.py  constants.py  env_variables.py  extra_docs.py  lint_collection_names.py  lint_extra_docs.py  lint_helpers.py  lint_plugin_docs.py  plugin_docs.py  process_docs.py  rst_labels.py  rstcheck.py  semantic_helper.py  test_helpers.py  write_docs.py
src/antsibull_docs/ansible_output/: __init__.py  load.py  process.py  replace.py
src/antsibull_docs/cli/: __init__.py  antsibull_docs.py
src/antsibull_docs/data/: ansible_2_10_routing.yml  collection-enum.py
src/antsibull_docs/docs_parsing/: __init__.py  ansible_doc.py  ansible_doc_core_213.py  ansible_internal.py  fqcn.py  parsing.py  routing.py
src/antsibull_docs/jinja2/: __init__.py  environment.py  filters.py  htmlify.py  parser.py  rstify.py  tests.py
src/antsibull_docs/markup/: _counter.py  _parser_impl.py  dom.py  format.py  html.py  htmlify.py  md.py  parser.py  rst.py  rstify.py  semantic_helper.py
src/antsibull_docs/schemas/: __init__.py  ansible_doc.py  app_context.py  collection_config.py  collection_links.py  config.py
src/antsibull_docs/utils/: collection_copier.py  collection_name_transformer.py  collection_names.py  get_pkg_data.py  rst.py  text.py
src/antsibull_docs/write_docs/: __init__.py  changelog.py  collections.py  hierarchy.py  indexes.py  io.py  plugin_stubs.py  plugins.py
src/sphinx_antsibull_ext/: __init__.py  antsibull-minimal.css  antsibull.sty  assets.py  colors-default-autodark.css  colors-default-dark.css  colors-default.css  directive_helper.py  directives.py  domains.py  nodes.py  roles.py  sphinx_helper.py
src/sphinx_antsibull_ext/css/: .gitignore  antsibull-minimal.scss  browserslistrc  build.sh  colors-default-autodark.scss  colors-default-dark.scss  colors-default.scss  cssnano.config.js  default-colors-dark.scss  default-colors-light.scss  package-lock.json  package-lock.json.license  package.json
src/sphinx_antsibull_ext/schemas/: ansible_links.py  ansible_output_data.py  ansible_output_meta.py  ansible_plugin.py
stubs/: argcomplete.pyi  rstcheck.pyi
stubs/ansible/: constants.pyi  release.pyi
stubs/ansible/cli/: __init__.pyi
stubs/jinja2/: utils.pyi
stubs/rstcheck_core/: checker.pyi  config.pyi  types.pyi
tests/: validate-html.py
tests/functional/: ansible-doc-cache-all-others.json  ansible-doc-cache-all.json  ansible-doc-cache-ansible.builtin-ns.col2-ns2.col.json  ansible-doc-cache-ansible.builtin-ns2.col.json  ansible-doc-cache-ansible.builtin-ns2.flatcol.json  ansible-doc-cache-ns.col1-ns.col2-ns2.col-ns2.flatcol.json  ansible-doc-cache-ns.col1-ns2.col-ns2.flatcol.json  ansible-doc-cache-ns.col1.json  ansible-doc-cache-ns.col2.json  ansible-doc-cache-ns2.col.json  ansible-doc-cache-ns2.flatcol.json  ansible-galaxy-cache-all-others.json  ansible-galaxy-cache-all.json  ansible-galaxy-cache-all.output  ansible-galaxy-cache-ns.col1.json  ansible-galaxy-cache-ns.col1.output  ansible-galaxy-cache-ns.col2.json  ansible-galaxy-cache-ns.col2.output  ansible-galaxy-cache-ns2.col.json  ansible-galaxy-cache-ns2.col.output  ansible-galaxy-cache-ns2.flatcol.json  ansible-version.output  ansible_doc_caching.py  antsibull-docs-stub.py  build-baseline.sh  build-docs-baseline.sh  build-sphinx-init-baseline.sh  sanitize-ansible-doc-dump.py  sanitize-ansible-galaxy-list.py  test.rst  test_ansible_output.py  test_baseline.py  test_docs_baseline.py  test_docs_html_baseline.py  test_docs_linting.py  test_sphinx_init_baseline.py  utils.py
tests/functional/baseline-default-html/: broken-refs.html  index.html
tests/functional/baseline-plugin/: ns2.col.foo_lookup.rst
tests/functional/baseline-simplified-rst-squash-hierarchy/: bar_filter.rst  bar_test.rst  foo2_module.rst  foo_1_redirect_module.rst  foo_2_redirect_module.rst  foo_3_redirect_module.rst  foo_4_redirect_module.rst  foo_5_redirect_module.rst  foo_become.rst  foo_cache.rst  foo_callback.rst  foo_cliconf.rst  foo_connection.rst  foo_filter.rst  foo_inventory.rst  foo_lookup.rst  foo_module.rst  foo_redirect_module.rst  foo_role.rst  foo_shell.rst  foo_strategy.rst  foo_test.rst  foo_vars.rst  index.rst  is_bar_test.rst  sub.foo3_module.rst
tests/functional/baseline-sphinx-init-collections/: build.sh  conf.py  requirements.txt
tests/functional/baseline-sphinx-init-config/: antsibull-docs.cfg  (+3 more)
tests/units/: test_jinja2.py  test_jinja2_parser.py  test_markup_parser.py
(+580 files in other folders)
