# Copyright (c) Ansible Project
# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "antsibull-docs"
version = "1.6.0"
description = "Tools for building Ansible documentation"
authors = ["Toshio Kuratomi <a.badger@gmail.com>", "Felix Fontein <felix@fontein.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ansible-community/antsibull-docs"
packages = [
    { include = "antsibull_docs", from="src" },
    { include = "sphinx_antsibull_ext", from="src" },
    { include = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Ansible",
    "Intended Audience :: Developers"
]

[tool.poetry.urls]
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"Bug tracker" = "https://github.com/ansible-community/antsibull-docs/issues"

[tool.poetry.scripts]
antsibull-docs = "antsibull_docs.cli.antsibull_docs:main"

[tool.poetry.dependencies]
python = "^3.6.1"
ansible-pygments = "*"
antsibull-core = ">= 1.2.0, < 2.0.0"
asyncio-pool = "*"
docutils = "*"
jinja2 = "*"
rstcheck = ">= 3.0.0, < 7.0.0"
sphinx = "*"

[tool.poetry.dev-dependencies]
asynctest = "*"
cryptography = "*"
codecov = "*"
flake8 = ">= 3.8.0"
mypy = "*"
# https://github.com/facebook/pyre-check/issues/398
pyre-check = "^0.9.15"
pylint = "^2.12.0"
pytest = "*"
pytest-asyncio = ">= 0.12"
pytest-cov = "*"
# Needed for TypedDict in rstcheck-core stubs
typing-extensions = {version = ">=3.7.4", python = "<3.8"}
types-docutils = "*"
types-PyYAML = "*"
# For development, we install dependent projects under our control in dev mode:
antsibull-core = { path = "../antsibull-core/", develop = true }

[tool.isort]
line_length = 100
multi_line_output = 0
balanced_wrapping = true
