# Copyright (c) Ansible Project
# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antsibull-docs"
version = "2.0.0a1"
description = "Tools for building Ansible documentation"
license = "GPL-3.0-or-later"
license-files = {globs=["LICENSES/*.txt"]}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Ansible",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "ansible-pygments",
    "antsibull-core >= 2.0.0, < 3.0.0",
    "antsibull-docs-parser >= 1.0.0, < 2.0.0",
    "asyncio-pool",
    "docutils",
    "jinja2 >= 3.0",
    "packaging",
    "rstcheck >= 3.0.0, < 7.0.0",
    "sphinx",
    # pydantic v2 is a major rewrite
    "pydantic >= 1.0.0, < 2.0.0",
    "semantic_version",
    "aiohttp >= 3.0.0",
    "twiggy",
    "PyYAML",
]

[[project.authors]]
name = "Toshio Kuratomi"
email = "a.badger@gmail.com"

[[project.authors]]
name = "Felix Fontein"
email = "felix@fontein.de"

[[project.maintainers]]
name = "Felix Fontein"
email = "felix@fontein.de"

[[project.maintainers]]
name = "Maxwell G"
email = "maxwell@gtmx.me"

[project.urls]
"Source code" = "https://github.com/ansible-community/antsibull-docs"
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"Bug tracker" = "https://github.com/ansible-community/antsibull-docs/issues"

[project.scripts]
antsibull-docs = "antsibull_docs.cli.antsibull_docs:main"

[project.optional-dependencies]
codeqa = [
    "antsibull-changelog",
    "flake8 >= 3.8.0",
    "pylint >= 2.17.2",
    "reuse",
]
coverage = [
    "coverage[toml]",
]
formatters = [
    "black",
    "isort",
]
test = [
    "ansible-core >= 2.14.0",
    "asynctest",
    "cryptography",
    "pytest",
    "pytest-asyncio >= 0.12",
    "pytest-cov",
    "pytest-error-for-skips",
]
typing = [
    "mypy",
    # https://github.com/facebook/pyre-check/issues/398
    "pyre-check >= 0.9.17",
    "types-aiofiles",
    "types-docutils",
    "types-PyYAML",
]
dev = [
    # Used by nox sessions
    "antsibull-docs[codeqa]",
    "antsibull-docs[formatters]",
    "antsibull-docs[test]",
    "antsibull-docs[typing]",
    # misc
    "nox",
]

[tool.hatch.build.targets.wheel]
packages = ["src/antsibull_docs", "src/sphinx_antsibull_ext"]

[tool.black]
exclude = '''
tests/functional/baseline-sphinx-init-.*
'''

[tool.isort]
profile = "black"

[tool.coverage.paths]
source = [
    "src",
   "*/site-packages",
]

[tool.mypy]
mypy_path = "stubs/"

[[tool.mypy.overrides]]
module = "semantic_version"
ignore_missing_imports = true
